fixed overlap

--- a/bggen/saxon-theme/static/css/style.css
+++ b/bggen/saxon-theme/static/css/style.css
@@ -329,7 +329,7 @@ header.site-header {
   position:relative;
 }
 
-.site-header::after {
+/* .site-header::after {
     content: '';
     position: absolute;
     bottom: 0;
@@ -346,7 +346,7 @@ header.site-header {
     );
     margin:0;
     padding:0;
-}
+} */
 
 ul.menu {
   font-weight: 700;
@@ -627,7 +627,7 @@ footer {
     padding-top: 1rem;
 }
 
-footer::before {
+/* footer::before {
     content: '';
     position: absolute;
     top: 0;
@@ -642,7 +642,7 @@ footer::before {
         var(--brand-main) 50%,
         transparent 100%
     );
-}
+} */
 
 ul, ol {
     margin: 0 0 1rem 0;
